# semubot_description

./: CMakeLists.txt  README.md  package.xml
config/: semubot_description.rviz
launch/: display_robot.launch.py
meshes/: head_scalp.stl  head_screen.stl  left_hand.stl  right_hand.stl
semubot_description/: .gitignore
urdf/: head.urdf.xacro  semubot.urdf.xacro
